# programbench-goal

./: .gitignore  .pre-commit-config.yaml  README.md  programbench_goal_runner.py  pyproject.toml
configs/: cpx62-localtools-xhigh.json  cpx62-miniswecompat-high.json  cpx62-miniswecompat-xhigh.json  cpx62-nointernet-high-smoke20.json  cpx62-nointernet-high.json  cpx62-nointernet-xhigh.json  cpx62-open-xhigh.json  cpx62-paper-xhigh.json  full-localtools-high.json  full-localtools-xhigh.json  full-miniswecompat-high.json  full-miniswecompat-xhigh.json  full-nointernet-high.json  full-nointernet-xhigh.json  hetzner-cpx62-smoke-xhigh.json  linux-smoke-miniswecompat-xhigh.json  linux-smoke-nointernet-xhigh.json  linux-smoke-paper-xhigh.json  local-mac-smoke-xhigh.json
docs/: index.html  paper-compliance.html  paper-compliance.md  runbook.html  runbook.md  task-details.html
prompts/: programbench_goal.md  programbench_goal_local_tools.md  programbench_goal_mini_swe_compatible.md  programbench_goal_no_internet.md  programbench_goal_open.md  sweep_babysitter_goal.md
scripts/: audit-run.py  bootstrap-linux-vm.sh  build-report.py  check-docs-size.py  check-metric-parity.py  collect-run-artifacts.py  doctor.sh  export-public-evidence.py  install-target-wrapper.sh  pb-target-exec  preflight-paper-host.py  privacy-scan.py  refresh-openai-pricing.py  refresh-programbench-baselines.py  refresh-programbench-task-baselines.py  run-batch.py  run-config.py  run-sweep.sh  smoke-inference-modes.sh  start-babysitter-tmux.sh  start-eval-shard-tmux.sh  start-sweep-tmux.sh  (+3 more)
(+2215 files in other folders)
